--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <![endif]-->
 
 		<script src="js/ArraySeparator.js"></script>
-        <script src="js/Application.js"></script>
+		<script src="js/ArraySorter.js"></script>
+		<script src="js/Application.js"></script>
 		<script>
 
 			var data = [ 1, 30, 'Banana', 23, 'Mango', 89, 'Orange', 54, 63, 72, 123, 'Kiwi', 'Melon', 'Cherry', 'Apple' ];
